--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -118,6 +118,7 @@
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\PlayerManager.cpp" />
     <ClCompile Include="source\sceneMain.cpp" />
+    <ClCompile Include="source\sceneResult.cpp" />
     <ClCompile Include="source\sceneSelect.cpp" />
     <ClCompile Include="source\sceneTitle.cpp" />
     <ClCompile Include="source\system\Framework.cpp" />
@@ -153,6 +154,7 @@
     <ClInclude Include="source\Particle.h" />
     <ClInclude Include="source\Player.h" />
     <ClInclude Include="source\PlayerManager.h" />
+    <ClInclude Include="source\sceneResult.h" />
     <ClInclude Include="source\sceneSelect.h" />
     <ClInclude Include="source\sceneTitle.h" />
     <ClInclude Include="source\system\Framework.h" />
