UI.cs,hの追加 DATA/BGにcoin_gage.png追加 sceneMainにUI関連の情報追加

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -140,6 +140,7 @@
     <ClCompile Include="IEX\IEX_System.cpp" />
     <ClCompile Include="IEX\IEX_Texture.cpp" />
     <ClCompile Include="IEX\IEX_View.cpp" />
+    <ClCompile Include="source\UI.cpp" />
     <ClCompile Include="source\Y2009.cpp" />
   </ItemGroup>
   <ItemGroup>
@@ -162,6 +163,7 @@
     <ClInclude Include="source\sceneMain.h" />
     <ClInclude Include="source\system\System.h" />
     <ClInclude Include="IEX\iextreme.h" />
+    <ClInclude Include="source\UI.h" />
     <ClInclude Include="source\Y2009.h" />
   </ItemGroup>
   <ItemGroup>
