--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -265,4 +265,18 @@
       <Filter>シェーダー</Filter>
     </CustomBuild>
   </ItemGroup>
+  <ItemGroup>
+    <FxCompile Include="DATA\Shader\Differed.fx">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
+    <FxCompile Include="DATA\Shader\Shader2D.fx">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
+    <FxCompile Include="DATA\Shader\Shader3D.fx">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
+    <FxCompile Include="DATA\Shader\shadow.fx">
+      <Filter>シェーダー</Filter>
+    </FxCompile>
+  </ItemGroup>
 </Project>
