プリンセス各攻撃 Player, BaseObj, PlayerManager構造改変

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -117,6 +117,7 @@
     <ClCompile Include="source\Particle.cpp" />
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\PlayerManager.cpp" />
+    <ClCompile Include="source\Princess.cpp" />
     <ClCompile Include="source\sceneMain.cpp" />
     <ClCompile Include="source\sceneResult.cpp" />
     <ClCompile Include="source\sceneSelect.cpp" />
@@ -155,6 +156,7 @@
     <ClInclude Include="source\Particle.h" />
     <ClInclude Include="source\Player.h" />
     <ClInclude Include="source\PlayerManager.h" />
+    <ClInclude Include="source\Princess.h" />
     <ClInclude Include="source\sceneResult.h" />
     <ClInclude Include="source\sceneSelect.h" />
     <ClInclude Include="source\sceneTitle.h" />
