--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -113,6 +113,7 @@
     <ClCompile Include="source\CoinManager.cpp" />
     <ClCompile Include="source\Collision.cpp" />
     <ClCompile Include="source\ECCMAN.cpp" />
+    <ClCompile Include="source\GameManager.cpp" />
     <ClCompile Include="source\GlobalFunction.cpp" />
     <ClCompile Include="source\Particle.cpp" />
     <ClCompile Include="source\Player.cpp" />
@@ -151,6 +152,7 @@
     <ClInclude Include="source\CoinManager.h" />
     <ClInclude Include="source\Collision.h" />
     <ClInclude Include="source\ECCMAN.h" />
+    <ClInclude Include="source\GameManager.h" />
     <ClInclude Include="source\GlobalFunction.h" />
     <ClInclude Include="source\Particle.h" />
     <ClInclude Include="source\Player.h" />
