--- a/IEX2010.vcxproj.filters
+++ b/IEX2010.vcxproj.filters
@@ -79,6 +79,9 @@
     <Filter Include="ソース ファイル\UI">
       <UniqueIdentifier>{8bfcff3e-bf09-4fbe-aec7-8ba91636777e}</UniqueIdentifier>
     </Filter>
+    <Filter Include="ソース ファイル\Player\Squirrel%28リス%29">
+      <UniqueIdentifier>{f047c0dc-ab27-4440-9665-c4e3874dced3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="source\system\Framework.cpp">
@@ -189,6 +192,9 @@
     <ClCompile Include="source\UI.cpp">
       <Filter>ソース ファイル\UI</Filter>
     </ClCompile>
+    <ClCompile Include="source\Squirrel.cpp">
+      <Filter>ソース ファイル\Player\Squirrel%28リス%29</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\system\Framework.h">
@@ -253,6 +259,9 @@
     </ClInclude>
     <ClInclude Include="source\UI.h">
       <Filter>ソース ファイル\UI</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Squirrel.h">
+      <Filter>ソース ファイル\Player\Squirrel%28リス%29</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
