--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="source\CoinManager.cpp" />
     <ClCompile Include="source\Collision.cpp" />
     <ClCompile Include="source\ECCMAN.cpp" />
+    <ClCompile Include="source\Effect.cpp" />
     <ClCompile Include="source\GameManager.cpp" />
     <ClCompile Include="source\GlobalFunction.cpp" />
     <ClCompile Include="source\Knight.cpp" />
@@ -122,6 +123,7 @@
     <ClCompile Include="source\Player.cpp" />
     <ClCompile Include="source\PlayerManager.cpp" />
     <ClCompile Include="source\Princess.cpp" />
+    <ClCompile Include="source\sceneLoad.cpp" />
     <ClCompile Include="source\sceneMain.cpp" />
     <ClCompile Include="source\sceneResult.cpp" />
     <ClCompile Include="source\sceneTitle.cpp" />
@@ -158,6 +160,7 @@
     <ClInclude Include="source\CoinManager.h" />
     <ClInclude Include="source\Collision.h" />
     <ClInclude Include="source\ECCMAN.h" />
+    <ClInclude Include="source\Effect.h" />
     <ClInclude Include="source\GameManager.h" />
     <ClInclude Include="source\GlobalFunction.h" />
     <ClInclude Include="source\Knight.h" />
@@ -165,6 +168,7 @@
     <ClInclude Include="source\Player.h" />
     <ClInclude Include="source\PlayerManager.h" />
     <ClInclude Include="source\Princess.h" />
+    <ClInclude Include="source\sceneLoad.h" />
     <ClInclude Include="source\sceneResult.h" />
     <ClInclude Include="source\sceneTitle.h" />
     <ClInclude Include="source\Squirrel.h" />
