スクリーン準備 タイトル調整

--- a/IEX2010.vcxproj
+++ b/IEX2010.vcxproj
@@ -129,6 +129,7 @@
     <ClCompile Include="source\sceneMain.cpp" />
     <ClCompile Include="source\sceneResult.cpp" />
     <ClCompile Include="source\sceneTitle.cpp" />
+    <ClCompile Include="source\Screen.cpp" />
     <ClCompile Include="source\Sound.cpp" />
     <ClCompile Include="source\Squirrel.cpp" />
     <ClCompile Include="source\system\Framework.cpp" />
@@ -176,6 +177,7 @@
     <ClInclude Include="source\sceneLoad.h" />
     <ClInclude Include="source\sceneResult.h" />
     <ClInclude Include="source\sceneTitle.h" />
+    <ClInclude Include="source\Screen.h" />
     <ClInclude Include="source\Sound.h" />
     <ClInclude Include="source\Squirrel.h" />
     <ClInclude Include="source\system\Framework.h" />
